Fix layout overflow when hovering a text long just enough

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -30,13 +30,14 @@
         float: left
       }
     }
-    a {
-      &:hover {
-        &::after {
-          content: ' ◁';
-        }
-      }
-    }
+    // causes UI overflow
+    //a {
+    //  &:hover {
+    //    &::after {
+    //      content: '◁';
+    //    }
+    //  }
+    //}
   }
 }
 
